feat: added flag migrations as yaml
flag migrations as yaml
