# swagger_gen/models/migration_status.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// MigrationStatus migration status
+//
+// swagger:model migrationStatus
+type MigrationStatus struct {
+
+	// code
+	Code int64 `json:"code,omitempty"`
+
+	// message
+	Message string `json:"message,omitempty"`
+
+	// migrations
+	Migrations []string `json:"migrations,omitempty"`
+}
+
+// Validate validates this migration status
+func (m *MigrationStatus) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this migration status based on context it is used
+func (m *MigrationStatus) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MigrationStatus) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MigrationStatus) UnmarshalBinary(b []byte) error {
+	var res MigrationStatus
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
